syntax = "proto3";

package prototype;

import "type.proto";
import "operation.proto";

message operation{
    oneof op{
        account_create_operation op1 = 1;
        transfer_operation op2 = 2;
    }
}

// transaction
message transaction{
    uint32 ref_block_num = 1;
    uint32 ref_block_prefix = 2;
    time_point_sec expiration = 3;
    repeated operation operations = 4;
}

message signed_transaction{
    transaction trx = 1;
    repeated signature_type signatures = 2;
}

message transaction_invoice{
    uint32 status = 1;
    bool vm_error = 2;
    uint32 vm_error_code = 3;
    string vm_error_msg = 4;
    uint64 gas_usage = 5;
    string vm_console = 6;
}

message transaction_wrapper{
    signed_transaction sig_trx = 1;
    transaction_invoice invoice = 2;
}

// block
message block_header{
    sha256 previous = 1;
    time_point_sec timestamp = 2;
    string witness = 3;
    sha256 transaction_merkle_root = 4;
}

message signed_block_header{
    block_header header = 1;
    signature_type witness_signature = 2;
}

message signed_block{
    signed_block_header signed_header = 1;
    repeated transaction_wrapper transactions = 2;
}
